cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Non C&amp;C Vehicles</relationshipLabel>
    <relationshipName>Non_C_C_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>