cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/fields/Company_Registered_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Registered Vehicle?</label>
    <type>Checkbox</type>
</CustomField>