cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Non C&amp;C Vehicles</relationshipLabel>
    <relationshipName>Non_C_C_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>