cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/fields/Current_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Current_Mileage__c</fullName>
    <label>Current Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>