cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>