cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>