cncProd/force-app/main/default/objects/Non_C_C_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Registered_Vehicle__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Registration_Number__c</columns>
    <columns>Current_Mileage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>